deploy/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: resume-portfolio
  namespace: resume-portfolio
spec:
  selector:
    app: resume-portfolio
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
