deploy/gateway.yaml
---
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: golang-portfolio-gateway
  namespace: portfolio-system
spec:
  selector:
    app: istio-ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
